tests/baselines/reference/ClassDeclaration13.errors.txt
==== tests/cases/compiler/ClassDeclaration13.ts (1 errors) ====
    class C {
       foo();
       bar() { }
       ~~~
!!! ClassDeclaration13.ts(3,4): error TS2239: Function overload name must be 'foo'.
    }